# STL

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  _main.cc  app.rc  cmake_install.cmake  config.h  config.h.in  file.txt  main.cc  pybind11_example.pyi  stl_exx.ilk  tests.py  tetris.cc
doc/: notes.docx  templates.docx  ~$notes.docx
docs/: solve1.docx  solve2.docx
game/: CMakeLists.txt  ExampleObject.cpp  ExampleObject.h  algorithms.lua  example.lua  games.h  lthis_object.h  lthis_object.lua  my_math.c  os_name.lua  python_dll_test.cpp  python_dll_test.h  scripts.lua  sdl2.lua
game/XML/TiXML/: CMakeLists.txt  tinyxml2.cpp  tinyxml2.h  tixml.cpp  tixml.h
game/fmod_api_core_ex/: CMakeLists.txt  DLC_KioskArt.xml  common.cpp  common_platform.cpp  common_platform.h  minimap_data.xml  play_sound.cpp  play_stream.cpp
game/lib/: README.md
game/luasdl/: audio.lua  font.lua  image_test.lua  joystick.lua  keyboard.lua  lua_sdl.lua  server.lua
game/mario/: CFG.cpp  CFG.h  CMakeLists.txt  Core.cpp  Core.h  FMOD.h  IMG.cpp  IMG.h  Menu.h  MenuOption.cpp  MenuOption.h  Music.cpp  Music.h  Text.cpp  Text.h  header.h  main.cpp  this_FMOD.cpp  this_FMOD.h
game/sdl/: font.lua  lua_sdl.lua
game/sdl2/: CMakeLists.txt  Game.cpp  Game.h  Game_fsm.cpp  Game_fsm.h  Game_state.cpp  Game_state.h  InputHandler.cpp  InputHandler.h  Menu.cpp  Menu.h  MenuOption.h  MenuState.cpp  MenuState.h  Music.cpp  Music.h  PlayerState.cpp  PlayerState.h  SDL2_ImageConfig.cmake  TextureManager.cpp  TextureManager.h  Vector2D.h  main.c  main.cc  prefix_code.h  sdl2_c++config.h
game/sdl2/SDL_Game_Dev_src/: CMakeLists.txt
game/sdl2/SDL_Game_Dev_src/M_Conan_the_Caveman/: Base64.cpp  Base64.h  CMakeLists.txt  Layer.h  Level.cpp  Level.h  LevelParser.cpp  LevelParser.h  MCC_config.h  TextureManager.cpp  TextureManager.h  TileLayer.cpp  TileLayer.h  Vector2D.h
game/sdl2/SDL_Game_Dev_src/M_Conan_the_Caveman/assets/: LevelParser.xml  blocks1.tsx  map1.tmx
game/sdl2game/: CMakeLists.txt  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  Player0.cpp  Player0.h  TextureManager.cpp  TextureManager.h  Vector2D.h  main.cpp  prefix_code.h
stl/: CMakeLists.txt  Makefile  _primer.lib  cmake_install.cmake
stl/src/: version.h
stl/src/_alg_test/: cases.cc  cases.h  cases.py
stl/src/_cmake/1/10_use_control_flow_constructs/: CMakeLists.txt  c++config.h  geometry_circle.cpp  geometry_circle.h  main.cpp  message.h
stl/src/_cmake/1/3/: CMakeLists.txt  main.cpp  message.h
stl/src/_cmake/1/4_controlling_compilation_with_conditions/: CMakeLists.txt
stl/src/_cmake/1/8_control_compiler_flags/: CMakeLists.txt
stl/src/_cmake/1/9_set_standard_for_lang/: CMakeLists.txt  message.cpp
stl/src/_cmake/2_detect_env/1_discover_system/: CMakeLists.txt
stl/src/_cmake/2_detect_env/2_dealing_platform_dependent_src/: CMakeLists.txt  main.cpp
stl/src/_cmake/2_detect_env/4_discover_host_processor_arch/: CMakeLists.txt  main.cpp
stl/src/_cmake/2_detect_env/5_discover_host_processor_instruction_set/: CMakeLists.txt  config.h  config.h.in  main.cpp
stl/src/_cmake/2_detect_env/6_enable_vec_for_eigen_lib/: CMakeLists.txt  main.cpp
stl/src/_cmake/3_deal_compiler-dependent_src/: CMakeLists.txt  main.cpp
stl/src/_primer/: _10_generic_alg.cc  _11_associate_container.cc  _11_associate_container.h  _12_dy_mem.cc  _12_dy_mem.h  _13_copy_control.cc  _13_copy_control.h  _14_operator.cc  _14_operator.h  _15_oop.cc  _15_oop.h  _16_template.cc  _16_template.h  _17_stdlib.cc  _17_stdlib.h  _18_huge_prog.cpp  _18_huge_prog.h  _19_special.cc  _19_special.h  _6_function.cc  _6_function.h  _7_class.cc  _7_class.h  _8_IO.cc  _8_IO.h  _9_sequential_container.cpp  _9_sequential_container.h  _templates.h  test.txt  utils.cc  utils.h
stl/src/_pybind11/: example.cpp  example.h  hello_world.lua
stl/src/_templates/: _templates.cc  _templates.h
stl/src/_torch/: regression.h  regression.py
stl/src/this_torch/: regression.h  regression.py
tests/python/: tests.py
